--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,3 +11,4 @@
 <meta property="og:image" content="{{ '/assets/img/og-image.png' | relative_url }}">
 <link rel="icon" href="{{ '/assets/img/favicon.png' | relative_url }}">
 <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
