--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    {% include head.html %}
-  </head>
+  {% include head.html %}
   <body>
-    <a class="skip-link" href="#content">Skip to content</a>
     {% include header.html %}
-    <main id="content" class="container">
+
+    <main class="site-main container">
       {{ content }}
     </main>
+
     {% include footer.html %}
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
   </body>
