--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="container header-row">
-    <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title }}</a>
+    <!-- No site title on the left -->
     <nav class="site-nav">
       {% for item in site.nav %}
         <a href="{{ item.url | relative_url }}"
