--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,7 @@
 <header class="site-header">
-  <div class="container header-row">
-    <!-- No site title on the left -->
-    <nav class="site-nav">
-      {% for item in site.nav %}
-        <a href="{{ item.url | relative_url }}"
-           class="{% if page.url == item.url %}active{% endif %}">{{ item.title }}</a>
-      {% endfor %}
-    </nav>
-  </div>
+  <nav class="nav container">
+    {% for item in site.nav %}
+      <a href="{{ item.url | relative_url }}" class="{% if page.url == item.url %}active{% endif %}">{{ item.title }}</a>
+    {% endfor %}
+  </nav>
 </header>
